# projeto-damas-haskell

./: .gitignore  Dockerfile  README.md  damas.cabal  run.sh
app/: CellState.hs  CursesWrapper.hs  EventLoop.hs  GameState.hs  HandleAction.hs  HandleSelection.hs  Main.hs  MovementFinder.hs  Navigation.hs  Render.hs  Teste.hs  Utils.hs
app/Render/: CursesWrapper.hs  Render.hs
app/test/: TestMovementFinder.hs  TestRunner.hs  TestSimple.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Utils.hs
src/Handles/: HandleAction.hs  HandleMovement.hs  HandleSelection.hs  Navigation.hs  Plinio.hs
src/States/: GameState.hs
src/Ui/: CursesWrapper.hs  InitialScreen.hs  Render.hs
