cabal-version:      2.4
name:               damas
version:            0.1.0.0
license:            NONE
author:             Gustavo
maintainer:         gustavo.gst15@gmail.com
extra-source-files: CHANGELOG.md

executable damas
    main-is:          teste.hs
    build-depends:    base ^>=4.16.4.0,
                      hscurses ^>= 1.5.0.0,
                      lens
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: GameState
