cabal-version:      2.4
name:               damas
version:            0.1.0.0
license:            NONE
author:             Gustavo
maintainer:         gustavo.gst15@gmail.com
extra-source-files: CHANGELOG.md

executable damas
    main-is:          Main.hs
    build-depends:    base,
                      hscurses,
                      lens
    hs-source-dirs:   app, app/Render
    default-language: Haskell2010
    other-modules:    GameState, HandleSelection, Utils
    extra-libraries:  ncursesw
