cabal-version:      2.4
name:               damas
version:            0.1.0.0
license:            NONE
author:             Gustavo
maintainer:         gustavo.gst15@gmail.com
extra-source-files: CHANGELOG.md

executable damas
    main-is:          Main.hs
    build-depends:    base,
                      hscurses,
                      lens,
                      HUnit
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    GameState, HandleSelection, Utils, MovementFinder
    extra-libraries:  ncursesw

test-suite damas-test
    type:                 exitcode-stdio-1.0
    main-is:              TestRunner.hs  
    build-depends:        base >=4.7 && <5,
                          HUnit,
                          lens
    hs-source-dirs:       app app/test
    other-modules:        TestMovementFinder 
    default-language:     Haskell2010